@@ -77,9 +77,9 @@
     </xsl:variable>
 
     <sub name="{$title}" link="{$target}">
-      <xsl:apply-templates select="section|sect1|sect2|
+      <xsl:apply-templates select="section|sect1|
                                    refentry|refsect|
-                                   bridgehead|part"
+                                   bridgehead|part|chapter"
                            mode="generate.devhelp.toc.mode"/>
     </sub>
   </xsl:template>
